--- a/app/views/supplier_payments/go_bancos.html.erb
+++ b/app/views/supplier_payments/go_bancos.html.erb
@@ -19,7 +19,7 @@
     <thead>
       <tr>
         <th class="bordered_right bordered_bottom" style="width: 100px;">
-         Orden
+         Cheque/Tx 
         </th>
         <th class="bordered_right bordered_bottom" style="width: 350px;">
           Proveedor 
@@ -51,7 +51,7 @@
           <td class="bordered_right bordered_bottom right">
             <%= money(supplierpayment.total) %>
           </td>
-          
+
           <td class="bordered_right bordered_bottom">
             <%= doDate(supplierpayment.created_at) %>
           </td>
@@ -63,9 +63,7 @@
              
           </td>
           
-          
-            <td><%= link_to 'Edit', edit_supplier_payment_path(supplierpayment) %></td>
-            
+          <td><%= link_to 'Edit', edit_supplier_payment_path(supplierpayment) %></td>
             
           <td class="bordered_right bordered_bottom">  
             
