--- a/app/views/supplier_payments/show.html.erb
+++ b/app/views/supplier_payments/show.html.erb
@@ -161,7 +161,8 @@
         </td>
 
      <td class="bordered_bottom bordered_right">
-         
+          <%= productItem.concept.descrip  %>
+    
         </td>
 
 
