--- a/app/views/supplier_payments/supplierpayment_details/show.html.erb
+++ b/app/views/supplier_payments/supplierpayment_details/show.html.erb
@@ -45,5 +45,5 @@
   <%= @supplierpayment_detail.tipocambio %>
 </p>
 
-<%= link_to 'Edit', edit_supplierpayment_detail_path(@supplierpayment_detail) %> |
-<%= link_to 'Back', supplierpayment_details_path %>
+<%= link_to 'Editar', edit_supplierpayment_detail_path(@supplierpayment_detail) %> |
+<%= link_to 'Regresar', supplierpayment_details_path %>
