--- a/app/views/supplier_payments/_form.html.erb
+++ b/app/views/supplier_payments/_form.html.erb
@@ -19,7 +19,7 @@
     </h4>
         <div class="field">
           <%= f.label :code, "Code*", :class => "bold" %><br />
-          <%= f.text_field :code, :onclick => "$(this).select();",:readonly  %>
+          <%= f.text_field :code, :onclick => "$(this).select();" ,:readonly => true %>
         </div>
 
 
