--- a/app/views/supplier_payments/_form.html.erb
+++ b/app/views/supplier_payments/_form.html.erb
@@ -81,7 +81,7 @@
       
     <div class="field">
       <%= f.label :descrip %><br />
-      <%= f.text_area :descrip %>
+      <%= f.text_field :descrip , :maxlength => 120,%>
     </div>  
 
 
