--- a/app/views/supplier_payments/show.html.erb
+++ b/app/views/supplier_payments/show.html.erb
@@ -65,6 +65,11 @@
   <%=  @supplierpayment.supplier.name     %>
 </p>
 
+<b>Detalle  : </b>  
+  <%=  @supplierpayment.descrip      %>
+</p>
+
+
 <%= hr() %>
 
 <h3>
