--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -24,7 +24,7 @@
    Agregar, editar or eliminar marcas .
   </p>
 
-
+<%= hr() %>
 <h3>
     <%= image_tag("product_kit_32.png", :class => "vmiddle") %>
     <%= link_to "Producto",productos_path  %>
@@ -69,7 +69,7 @@
      Agregar, editar or eliminar programas para tu negocio.
   </p>
 
-
+<%= hr() %>
   
 </div>
 
@@ -150,9 +150,7 @@
   <p>
      Agregar, editar or agregar un tipo
   </p>  
-  
-<%= hr() %>
-  
+
 <%= hr() %>
 
 
@@ -166,4 +164,16 @@
      Agregar, editar or agregar un concepto de cheques 
   </p>  
 
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to " Tipo movimientos  ",tipomovs_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar un concepto de cheques 
+  </p>  
 </div>
