--- a/app/views/stamentacounts/_form.html.erb
+++ b/app/views/stamentacounts/_form.html.erb
@@ -2,16 +2,42 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :bank_account_id %>
-    <%= f.input :fecha1 %>
-    <%= f.input :fecha2 %>
-    <%= f.input :saldo_inicial %>
-    <%= f.input :saldo_final %>
-    <%= f.input :user_id %>
-    <%= f.input :company_id %>
+
+    
+      <div class="field">
+      <%= f.label :bank_acount_id ,"Cuenta bancaria "%><br />
+       <%= f.select :bank_acount_id,options_from_collection_for_select(@bank_acounts,'id','number'),  {style: "width: 100px" } %>
+
+    </div>
+
+
+    <div class="field">
+      <%= f.label :fecha1, "Fecha*", :class => "bold" %><br />
+      <%= f.date_field :fecha1 ,:class => "input.tf_short" %>
+    </div>
+     <div class="field">
+      <%= f.label :fecha2, "Fecha*", :class => "bold" %><br />
+      <%= f.date_field :fecha2 ,:class => "input.tf_short" %>
+    </div>
+
+    
+    <div class="field">
+      <%= f.label :saldo_inicial, "Saldo inicial ", :class => "bold" %><br />
+      <%= f.number_field :saldo_inicial ,:step => 0.01 %>
+    </div>
+
+
+    
+    <div class="field">
+      <%= f.label :saldo_final, "Saldo final  ", :class => "bold" %><br />
+      <%= f.number_field :saldo_final ,:step => 0.01 %>
+    </div>
+
+
+
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit ,"Grabar"%>
   </div>
 <% end %>
