--- a/app/views/companies/cpagar.html.erb
+++ b/app/views/companies/cpagar.html.erb
@@ -12,8 +12,9 @@
 
   <h3>
     <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Registrar estado de cuenta ", stamentacounts_path  %>
-  </h3>
+    <%= link_to "Registrar estado de cuentas ", stamentacounts_path  %>
+
+    </h3>
 
   <p>
     Registrar estado de cuenta   
