--- a/app/views/companies/cpagar.html.erb
+++ b/app/views/companies/cpagar.html.erb
@@ -10,9 +10,11 @@
   </p>
  <%= hr() %>
 
+
+
   <h3>
     <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    <%= link_to "Registrar estado de cuentas ", stamentacounts_path  %>
+    <%= link_to "Registrar estado de cuentas.", stamentacounts_path  %>
 
     </h3>
 
