--- a/app/views/stamentacounts/show.html.erb
+++ b/app/views/stamentacounts/show.html.erb
@@ -38,6 +38,8 @@
 
     <div class="button">
       <%= link_to 'Agregar Item', new_stamentacount_stamentacount_detail_path(@stamentacount) %>
+      <%= link_to 'Agregar Cheques/Tx', "/stamentacounts/do_process/#{@stamentacount.id}" %> 
+
     </div> 
 
 <h3>
