--- a/app/views/companies/cpagar.html.erb
+++ b/app/views/companies/cpagar.html.erb
@@ -28,7 +28,7 @@
 
   <h3>
     <%= image_tag("invoice_32.png", :class => "vmiddle") %>
-    
+     <%= link_to "Conciliacion Bancaria.", "/companies/reports/rpt_concilia_1" %>
   </h3>
 
   <p>
