--- a/app/views/layouts/pdf-footers2.html.erb
+++ b/app/views/layouts/pdf-footers2.html.erb
@@ -34,10 +34,10 @@
      <td width = "20%" align ="left"> </td>
      <td width = "40%" align ="left"> RESUMEN</td>
 
-     <td width = "10%" align ="left"> <%= @saldo_inicial %>  </td>
-     <td width = "10%" align ="center"> <%= @total_cargos %></td>
-     <td width = "10%" align ="center"> <%= @total_abonos %></td>
-     <td width = "10%" align ="center"> <%= @saldo %> </td>
+     <td width = "10%" align ="left">   <%= money(@saldo_inicial) %>  </td>
+     <td width = "10%" align ="center"> <%= money(@total_cargos) %></td>
+     <td width = "10%" align ="center"> <%= money(@total_abonos) %></td>
+     <td width = "10%" align ="center"> <%= money(@saldo) %> </td>
      
      </tr>
 
