--- a/app/views/layouts/pdf-footers2.html.erb
+++ b/app/views/layouts/pdf-footers2.html.erb
@@ -20,24 +20,24 @@
 
      <table style='font-family:"Courier New", Courier, monospace; font-size:80% ;width:100%'>
     
-     <tr bgcolor="#B4D7F7"> 
-     <td width = "20%" align ="left"> </td>
-     <td width = "40%" align ="left">  </td>  
-     <td width = "10%" align ="left"> Saldo Anterior </td>
-     <td width = "10%" align ="center">Cargos </td>
-     <td width = "10%" align ="center">Abonos </td>
-     <td width = "10%" align ="center">Saldo </td>
+     <tr > 
+     <td width = "20%" align ="left" rowspan="2"> </td>
+     <td width = "40%" align ="center" rowspan="2"> R E S U M E N     </td>  
+     <td width = "10%" align ="left" bgcolor="#B4D7F7"> Saldo Anterior </td>
+     <td width = "10%" align ="center" bgcolor="#B4D7F7">Cargos </td>
+     <td width = "10%" align ="center" bgcolor="#B4D7F7">Abonos </td>
+     <td width = "10%" align ="center" bgcolor="#B4D7F7">Saldo </td>
     
      </tr>
 
      <tr >
-     <td width = "20%" align ="left"> </td>
-     <td width = "40%" align ="left"> RESUMEN</td>
+     
+    
 
-     <td width = "10%" align ="left">   <%= money(@saldo_inicial) %>  </td>
-     <td width = "10%" align ="center"> <%= money(@total_cargos) %></td>
-     <td width = "10%" align ="center"> <%= money(@total_abonos) %></td>
-     <td width = "10%" align ="center"> <%= money(@saldo) %> </td>
+     <td width = "10%" align ="right">   <%= money(@saldo_inicial) %>  </td>
+     <td width = "10%" align ="right"> <%= money(@total_cargos) %></td>
+     <td width = "10%" align ="right"> <%= money(@total_abonos) %></td>
+     <td width = "10%" align ="right"> <%= money(@saldo) %> </td>
      
      </tr>
 
