--- a/app/views/supplier_payments/rpt_banco_1.pdf.erb
+++ b/app/views/supplier_payments/rpt_banco_1.pdf.erb
@@ -43,7 +43,7 @@
       <% @saldo = @saldo_inicial %>
 
         <% if @stamentacount_details.size  > 0   %>
-        <table style=  'font-size:80% ;width:100%' border="0" >  
+        <table style=  'font-size:80% ;width:100%' border="0" border-collapse: collapse >  
             <tr bgcolor="#B4D7F7"> 
             <td width="10%"> Fecha</td>              
             <td width="10%"> Nro.Cheque </td>
