--- a/app/views/reports/rpt_concilia_1.html.erb
+++ b/app/views/reports/rpt_concilia_1.html.erb
@@ -47,5 +47,12 @@ totals = []
   <%= submit_tag "Excel", :name => "print" %>
      
 <% end %>
+
+<div class="buttons">
+
+<%= link_to 'Regresar', "/companies/cpagar/1" %>
+</div>
+
+
 <br />
 
