--- a/app/views/stamentacounts/index.html.erb
+++ b/app/views/stamentacounts/index.html.erb
@@ -35,5 +35,9 @@
 </table>
 
 <br>
+<div class="buttons">
 
 <%= link_to 'Nuevo Movimiento', new_stamentacount_path %>
+<%= link_to 'Regresar', "/companies/cpagar/1" %>
+
+</div>
