--- a/app/views/supplier_payments/rpt_concilia_1.pdf.erb
+++ b/app/views/supplier_payments/rpt_concilia_1.pdf.erb
@@ -24,7 +24,7 @@
 
 
 
-        <% if @detalle_cheques.size  > 0   %>
+        <% unless @detalle_cheques.nil?    %>
         <table style=  'font-size:80% ;width:100%'>  
          <tr style="font-weight:bold">
             <td width="12%"> Fecha</td>              
