--- a/app/views/supplier_payments/go_bancos.html.erb
+++ b/app/views/supplier_payments/go_bancos.html.erb
@@ -1,7 +1,7 @@
 <div class="breadcrumbs">
   <%= link_to "My companies", "/companies" %> &raquo;
   <%= link_to @company.name, @company %> &raquo;
-  <%= link_to "Compras", "/companies/purchases/#{@company.id}" %>
+  <%= link_to "Cuentas por Pagar", "/companies/supplier_payments/#{@company.id}" %>
 </div>
 
 <h2>
