--- a/app/views/reports/reports_cpagar.html.erb
+++ b/app/views/reports/reports_cpagar.html.erb
@@ -33,9 +33,18 @@
     <%= link_to "Cuentas x pagar por vencimiento  ", "/companies/reports/rpt_cpagar5_pdf/#{@company.id}" %>
   </p>
   
-  
 
+  
+ <h3>
+    Cheques / Transferencias 
+  </h3>
+  
+  <p class="big">
+    <%= link_to "Cheques girados por concepto   ", "/companies/reports/rpt_cpagar6_pdf/#{@company.id}" %>
+  </p>
+ 
 </div>
+
 
 <div class="mid_box">
 </div>
