--- a/app/views/stamentacounts/edit.html.erb
+++ b/app/views/stamentacounts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Stamentacount</h1>
+<h1>Editar </h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @stamentacount %> |
-<%= link_to 'Back', stamentacounts_path %>
+<%= link_to 'Ver', @stamentacount %> |
+<%= link_to 'Regresar', stamentacounts_path %>
