--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -176,4 +176,19 @@
   <p>
      Agregar, editar or agregar un concepto de cheques 
   </p>  
+
+<%= hr() %>
+
+
+  <h3>
+        <div>
+          <%= image_tag("clients_32.png", :class => "vmiddle") %>
+          <%= link_to " Documentos  ",documents_path %> 
+        </div>
+  </h3>
+  <p>
+     Agregar, editar or agregar documentos 
+     
+  </p>  
+
 </div>
