--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -34,6 +34,10 @@
 <div class="button">
 
 <%= link_to 'Nueva Version', new_version_path %>
+
+
+<%= link_to "CSV", medios_path(format: "csv") %> |
+
 </div>
 
 
