--- a/app/views/versions/index.html.erb
+++ b/app/views/versions/index.html.erb
@@ -36,7 +36,7 @@
 <%= link_to 'Nueva Version', new_version_path %>
 
 
-<%= link_to "CSV", medios_path(format: "csv") %> |
+<%= link_to "CSV", versions_path(format: "csv") %> |
 
 </div>
 
