--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -48,6 +48,7 @@
         <div >
         <input type="hidden" name="ac_item_id" id="ac_item_id" value="<% if @ac_item_id %><%= @ac_item_id %><% end %>"/>
         <input type="text" name="ac_item" id="ac_item" value="<% if @ac_item %><%= @ac_item %><% end %>"  />
+          <%= f.text_field :descrip   %>
         </div>
       </td>
       
