--- a/app/views/medios/_form.html.erb
+++ b/app/views/medios/_form.html.erb
@@ -27,6 +27,11 @@
     <%= f.text_field :estacion %>
   </div>
 
+  <div class="field">
+    <%= f.check_box :taxable , "IGV." %>
+    <%= f.label :taxable %>
+  </div>
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
