--- a/app/views/medios/_form.html.erb
+++ b/app/views/medios/_form.html.erb
@@ -28,8 +28,8 @@
   </div>
 
   <div class="field">
-    <%= f.check_box :taxable , "IGV." %>
-    <%= f.label :taxable %>
+    <%= f.check_box :taxable  %>
+    <%= f.label :taxable, "IGV? " %>
   </div>
 
   <div class="form-actions">
