--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -30,8 +30,14 @@
 
 
 <div class="button">
+
 <%= link_to 'Nuevo Producto', new_producto_path %>
+
+<%= link_to "CSV", productos_path(format: "csv") %> |
+
 </div>
+
+
 
 
 
